objects/BMCServiceDesk__SYSPopupObject__c.object
<CustomObject>
    <description>This object allows you to store the pop-up names.</description>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__popupObjectName__c</fullName>
        <label>Popup Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__searchByInactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search By Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__searchByStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search by Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Popups</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__popupObjectName__c</columns>
        <columns>BMCServiceDesk__searchByInactive__c</columns>
        <columns>BMCServiceDesk__searchByStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Popup Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSPopupObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Unique_Popup_Id_Constraint</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(VLOOKUP($ObjectType.BMCServiceDesk__SYSPopupObject__c.Fields.Name ,$ObjectType.BMCServiceDesk__SYSPopupObject__c.Fields.Name ,NULLVALUE(Name, Name) ))) 
 &amp;&amp;  
VLOOKUP($ObjectType.BMCServiceDesk__SYSPopupObject__c.Fields.Id ,$ObjectType.BMCServiceDesk__SYSPopupObject__c.Fields.Name ,NULLVALUE(Name, Name)  )&lt;&gt;Id</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Popup Id already exists!!!</errorMessage>
    </validationRules>
</CustomObject>